--- a/src/search/SearchBox.module.css
+++ b/src/search/SearchBox.module.css
@@ -1,43 +1,48 @@
 .main {
-    margin-top: 10px;
-    
+  margin-top: 10px;
 }
 
 .cards {
-    display: flex;
-    flex-direction: row;
-    flex-wrap: wrap;
-    
+  display: flex;
+  flex-wrap: wrap;
 }
 
-.content:hover  {
-    opacity: 0.8;
-    
+.content:hover {
+  opacity: 0.8;
 }
 
 .content {
-    background-color: #3f51b5;
+  background-color: #3f51b5;
+  display: flex;
+  align-items: stretch;
+  justify-content: center;
+  height: 400px;
 }
 
 .box {
-    display: inline;
-    margin-top: 7px;
-    margin-left: 5px;
+  display: inline;
+  margin-top: 7px;
+  margin-left: 5px;
 }
 
 .listItem {
-    list-style: none;
-    display: block;
-    color: black;
-    
+  list-style: none;
+  color: black;
 }
 
 .listItem .addMovie {
-    visibility: hidden;
-    
+  visibility: hidden;
 }
 
 .listItem:hover > .addMovie {
-    display: inline-flex;
-    visibility: visible;
+  display: inline-flex;
+  visibility: visible;
+}
+
+.root {
+  max-height: 430px;
+}
+
+.title {
+  text-align: center;
 }
