--- a/src/search/SearchBox.module.css
+++ b/src/search/SearchBox.module.css
@@ -13,13 +13,14 @@
 }
 
 .content {
-  background-color: #3f51b5;
+  background-color: #939393;
   display: flex;
   align-items: stretch;
   justify-content: center;
-  height: 420px;
+  height: 480px;
   cursor: pointer;
 }
+
 
 .box {
   display: inline;
@@ -47,6 +48,9 @@
 
 .title {
   text-align: center;
+  font-family: Blacksword;
+  font-size: 60px;
+  color: #3f51b5;
 }
 
 
