--- a/src/search/SearchBox.module.css
+++ b/src/search/SearchBox.module.css
@@ -9,7 +9,7 @@
 
 .content:hover {
   opacity: 0.8;
-  transform: scale(1.1);
+  /* transform: scale(1.1); */
 }
 
 .content {
@@ -17,7 +17,7 @@
   display: flex;
   align-items: stretch;
   justify-content: center;
-  height: 480px;
+  height: 500px;
   cursor: pointer;
 }
 
@@ -53,7 +53,7 @@
 }
 
 .delete {
-  margin-top: 10px;
+  margin-top: 15px;
 }
 
 input[type="radio"] {
