--- a/src/Movie/MovieList.scss
+++ b/src/Movie/MovieList.scss
@@ -6,7 +6,7 @@
   .movie-details {
     display: flex;
     flex-direction: column;
-    justify-content: space-between;
+    justify-content: space-around;
     &:hover {
       .add-movie {
         visibility: visible;
@@ -36,6 +36,10 @@
 
   .add-movie {
     visibility: hidden;
+  }
+
+  .delete {
+    margin-left: 20px;
   }
 }
 
