--- a/src/search/SearchBox.module.css
+++ b/src/search/SearchBox.module.css
@@ -5,13 +5,17 @@
 .title {
   text-align: center;
   font-family: Blacksword;
-  font-size: 60px;
+  font-size: 50px;
   color: #3f51b5;
 }
 
-.delete {
-  margin-top: 15px;
-  margin-left: 15px;
+@media screen and (max-width: 766px) {
+  .title {
+    text-align: center;
+    font-family: Blacksword;
+    font-size: 30px;
+    color: #3f51b5;
+  }
 }
 
 input[type="radio"] {
